ERROR FIX FOR JAVASCRIPT NOT CALLED ON CHANGE PW | DELETE CODE LINES NOT USED

--- a/ttreeGradle/src/main/resources/templates/adminCreateUser.html
+++ b/ttreeGradle/src/main/resources/templates/adminCreateUser.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>회원 생성/정보 업데이트</title>
     <link rel="stylesheet" href="/css/createUserStyle.css">
 </head>
 <body>
