--- a/ttreeGradle/src/main/resources/templates/changePW.html
+++ b/ttreeGradle/src/main/resources/templates/changePW.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>비밀번호 수정하기</title>
@@ -39,14 +39,90 @@
     </style>
 </head>
 <body>
-<form role="form" action="/changePW" id="changePW" method="POST" onsubmit="return checkCondition();">
     <h2>✔비밀번호 수정</h2>
+    <form action="/changePW/checkOldPW" id="checkPW" method="POST">
     <div class="oldPW">
         <p>현재 비밀번호 입력:</p>
-        <input type="password" id="oldpw" value="" name="oldpw"
-               required minlength="6">
+        <input type="password" id="oldpw" name="oldpw" required minlength="6">
+        <button type="submit" id="checkOldPWButton" name="checkPW">이전 비밀번호 확인하기</button>
     </div>
+        <p>이전 비밀번호 확인 여부: [[${checkPWStatus}]]</p>
+    </form>
+    <script>
+        if([[${checkPWStatus}]]) {
+            document.getElementById('oldpw').setAttribute('disabled', 'disabled');
+            document.getElementById('oldpw').value = [[${password}]];
+        }
+    </script>
     <br>
+    <script>
+        let check_password;
+
+        function check_pw() {
+            var pw = document.getElementById('newPW').value;
+            var SC = ["!", "@", "$", "&", "*"];
+            var check_SC = 0;
+
+            for (var i = 0; i < SC.length; i++) {
+                if (pw.indexOf(SC[i]) != -1) {
+                    check_SC = 1;
+                }
+            }
+
+            if (check_SC == 0) {
+                check_password = false;
+            }
+
+            if (document.getElementById('newPW').value != '' && document.getElementById('newPW_check').value != '') {
+                if (document.getElementById('newPW').value == document.getElementById('newPW_check').value) {
+                    document.getElementById('check').innerHTML = '입력하신 비밀번호가 일치합니다.'
+                    document.getElementById('check').style.color = 'blue';
+                    check_password = true;
+                } else {
+                    document.getElementById('check').innerHTML = '입력하신 비밀번호가 일치하지 않습니다.'
+                    document.getElementById('check').style.color = 'red';
+                    check_password = false;
+                }
+            }
+        }
+
+        function pw_format() {
+            var pw = document.getElementById('newPW').value;
+            var SC = ["!", "@", "$", "&", "*"];
+            var check_SC = 0;
+
+            for (var i = 0; i < SC.length; i++) {
+                if (pw.indexOf(SC[i]) != -1) {
+                    check_SC = 1;
+                }
+            }
+
+            if (check_SC == 0) {
+                window.alert("!, @, $, &, * 를 포함하여 비밀번호를 입력하여주세요!")
+                check_password = false;
+                document.getElementById('newPW').value = '';
+            }
+        }
+
+        function checkCondition() {
+            if (check_password) {
+                return true;
+            } else {
+                window.alert("비밀번호와 비밀번호 확인이 일치하지 않습니다!");
+                return false;
+            }
+        }
+
+        if ("[[${isChanged}]]" === "true") {
+            alert('비밀번호가 변경되었습니다. 다음 로그인부터 반영됩니다.');
+            window.close();
+        } else if("[[${isChanged}]]" === "noCheckedLog") {
+            alert('이전 비밀번호 입력을 먼저 완료하세요.');
+        } else if("[[${isChanged}]]" === "passwordWrong") {
+            alert('비밀번호와 비밀번호 확인이 일치하지 않습니다.');
+        }
+    </script>
+    <form role="form" action="/changePW" id="changePW" method="POST" onsubmit="return checkCondition();">
     <div class="PW">
         <p>새로운 비밀번호 입력:</p>
         <input type="password" id="newPW" onkeyup="check_pw();" onchange="pw_format()" value="" name="pass"
@@ -54,8 +130,7 @@
 
         <p>비밀번호 확인:</p>
         <input type="password" id="newPW_check" onkeyup="check_pw();" onchange="pw_format()" value=""
-               name="password_check"
-               required minlength="6">
+               name="password_check" required minlength="6">
         <br> <span id="check"></span>
     </div>
     <br>
@@ -65,77 +140,5 @@
         </button>
     </div>
 </form>
-
-<script>
-    let check_password;
-
-    function check_pw() {
-        var pw = document.getElementById('newPW').value;
-        var SC = ["!", "@", "$", "&", "*"];
-        var check_SC = 0;
-
-        for (var i = 0; i < SC.length; i++) {
-            if (pw.indexOf(SC[i]) != -1) {
-                check_SC = 1;
-            }
-        }
-
-        if (check_SC == 0) {
-            check_password = false;
-        }
-
-        if (document.getElementById('newPW').value != '' && document.getElementById('newPW_check').value != '') {
-            if (document.getElementById('newPW').value == document.getElementById('newPW_check').value) {
-                document.getElementById('check').innerHTML = '입력하신 비밀번호가 일치합니다.'
-                document.getElementById('check').style.color = 'blue';
-                check_password = true;
-            } else {
-                document.getElementById('check').innerHTML = '입력하신 비밀번호가 일치하지 않습니다.'
-                document.getElementById('check').style.color = 'red';
-                check_password = false;
-            }
-        }
-    }
-
-    function pw_format() {
-        var pw = document.getElementById('newPW').value;
-        var SC = ["!", "@", "$", "&", "*"];
-        var check_SC = 0;
-
-        for (var i = 0; i < SC.length; i++) {
-            if (pw.indexOf(SC[i]) != -1) {
-                check_SC = 1;
-            }
-        }
-
-        if (check_SC == 0) {
-            window.alert("!, @, $, &, * 를 포함하여 비밀번호를 입력하여주세요!")
-            check_password = false;
-            document.getElementById('newPW').value = '';
-        }
-    }
-
-
-
-
-    function checkCondition() {
-        if (check_password) {
-            return true;
-        } else {
-            window.alert("비밀번호와 비밀번호 확인이 일치하지 않습니다!");
-            return false;
-        }
-    }
-
-    if ([[${isChanged}]]) {
-        alert('비밀번호가 변경되었습니다. 다음 로그인부터 반영됩니다.');
-        window.close();
-    } else {
-        alert('현재 비밀번호가 일치하지 않습니다.')
-    }
-
-
-</script>
-
 </body>
 </html>
