--- a/ttreeGradle/src/main/resources/templates/SignupInfo.html
+++ b/ttreeGradle/src/main/resources/templates/SignupInfo.html
@@ -190,7 +190,7 @@
                     } else if (!check_studentIDNum) {
                         window.alert("학번확인을 눌러주세요!" + check_studentIDNum);
                     } else if (check_password && check_studentIDNum) {
-                        window.alert("회원가입에 성공하셨습니다" + "\n" + "check_password: " + check_password + "\n" + "checkStudentIdNum" + check_studentIDNum);
+                        window.alert("회원가입에 성공하셨습니다");
                     }
                 }
 
