FIX from 분류 to 분야 on projectLists

--- a/ttreeGradle/src/main/resources/templates/projectList.html
+++ b/ttreeGradle/src/main/resources/templates/projectList.html
@@ -53,7 +53,7 @@
                     <td><label><input class="language_select" name="type_select" type="checkbox" value="Web">Web</label></td>
                     <td><label><input class="language_select" name="type_select" type="checkbox" value="AI/DL/ML">AI/DL/ML</label></td>
                     <td><label><input class="language_select" name="type_select" type="checkbox" value="VisionProcess">Vision<br/>&nbsp;&nbsp;Process</label></td>
-                    <td><label><input class="language_select" name="type_select" type="checkbox" value="typeEtc">분류 기타</label></td>
+                    <td><label><input class="language_select" name="type_select" type="checkbox" value="typeEtc">분야 기타</label></td>
                 </tr>
             </table>
             <br>
